Func to create sequences from dataset

--- a/dataset/twitter_playground.ipynb
+++ b/dataset/twitter_playground.ipynb
@@ -369,34 +369,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 25,
    "outputs": [],
    "source": [
-    "a = [['a', 'b'], ['c'], ['a', 'b']]"
+    "df = pd.read_csv('musk_twitter_2022-12-10.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -407,22 +383,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 37,
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[228], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;43mset\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43ma\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[1;31mTypeError\u001B[0m: unhashable type: 'list'"
-     ]
+     "data": {
+      "text/plain": "(0, \"['twitter', 'delet', 'billion', 'account', 'lol', 'elonmusk', 'waiv', 'due', 'dilig', 'billion', 'twitter', 'purchas', 'https', 'co', 'btvdaeft']\", 43)"
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a."
+    "df[['text', 'time_window']].to_records()[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "dd = defaultdict(lambda: list())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "for record in df[['text', 'time_window']].to_records():\n",
+    "    dd[record[2]].append(eval(record[1]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [],
+   "source": [
+    "seq = list()\n",
+    "for k,v in dd.items():\n",
+    "    seq.append(v)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "4"
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(seq)"
    ],
    "metadata": {
     "collapsed": false,
